# benjaminmishra.github.io

./: .dockerignore  .gitignore  CNAME  Dockerfile.preview  LICENSE  README.md  index.html  jest.config.js  package.json  tailwind.config.js  tsconfig.json  vite.config.js  wrangler.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
.idx/: dev.nix
api/: Cargo.toml  test.http
api/src/: main.rs
functions/: click.ts  contact.ts
infra/: Pulumi.example.yaml  Pulumi.yaml  README.md  package.json
infra/src/: index.ts
pages/: contact.tsx  index.tsx
public/: index.html
public/articles/: building-modern-blog-react-typescript.md
scripts/: build-site.sh  deploy-aws.sh  deploy-cloudflare.sh  deploy-netlify.sh  deploy.sh  infra.sh
src/: App.css  App.test.tsx  App.tsx  Router.tsx  footer.tsx  index.css  setupTests.ts
src/__mocks__/: rehype-raw.ts  rehype-sanitize.ts
src/__tests__/: App.test.tsx  Article.test.tsx  ArticlePreview.test.tsx  Nav.test.tsx  WorkExperience.test.tsx
src/components/: ArticleHeroImage.tsx  ArticlePreview.tsx  ArticlePublishedDate.tsx  ArticleTag.tsx  Banner.tsx  BlogLandingHeader.tsx  ExperienceEntry.tsx  Footer.tsx  GitHubProjects.tsx  Header.tsx  Hero.tsx  HeroSection.tsx  Logo.tsx  Nav.tsx  article-preview.tsx  banner.tsx  footer.tsx  header.tsx  logo.tsx  nav.tsx
src/config/: banner-config.ts
src/pages/: Article.tsx  BlogLanding.tsx  ContactMe.tsx  Home.tsx  Layout.tsx  NotFound.tsx  (+4 more)
web/: .gitignore  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
(+49 files in other folders)
