[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
lettre = "0.11.7"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.203", features = ["derive"]}